[elf] elf_f can no longer be compiled by elf_e - now self-compilation only. Parser.pm temp files improved, so simultaneous elf's no longer break each other. PrimitivesP5.pm added to elf_f_faster. $*PID added to PrimitivesP5.pm, and unlink() to the runtime.  run-tests now ignores a bogus enormous plan number from list_quote_junction.t.  Updated run-tests results.
git-svn-id: http://svn.pugscode.org/pugs@20451 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/README
+++ b/misc/elf/README
@@ -40,9 +40,8 @@ Purpose:
 Maybe:
   Branches - additional and renamed: Good / Main / Faster.(?)
 Comparison: Like elf_e, but new parser version.
-Written in: elf_e dialect, but likely to become self levitating,
-  to permit rapid parsetree changes.
-Can be compiled by: elf_f, and for now elf_e.
+Written in: elf_f dialect.
+Can be compiled by: elf_f.
 Linkages: none.
 Status: active development.
 
