--- a/misc/elf/elf_f_src/README
+++ b/misc/elf/elf_f_src/README
@@ -2,16 +2,9 @@
 touch     ../elf_f0 ../elf_f1 ../elf_f2 ../elf_f ../elf_f_faster ../elf_f_faster2
 chmod a+x ../elf_f0 ../elf_f1 ../elf_f2 ../elf_f ../elf_f_faster ../elf_f_faster2
 
-../elf_e -x -o ../elf_f0 Elf.pm
-ELF_STD_RED_RUN=../../STD_red/STD_red_run ../elf_f0 -x -o ../elf_f Elf.pm
-cp ../elf_f ../elf_f1
-../elf_f1 -x -o ../elf_f2 Elf.pm
-diff ../elf_f[12]
-../elf_f2 -e 'say 3'
-
 ../elf_f -x -o ../elf_f1 Elf.pm
 ../elf_f1 -x -o ../elf_f2 Elf.pm
-diff ../elf_f ../elf_f2
+diff ../elf_f1 ../elf_f2
 ../elf_f2 -e 'say 3'
 
 ../elf_f -x -o ../elf_f_faster Elf_Faster.pm
@@ -19,3 +12,5 @@ diff ../elf_f ../elf_f2
 ../elf_f_faster -x -o ../elf_f_faster2 Elf_Faster.pm
 diff ../elf_f_faster ../elf_f_faster2
 ../elf_f_faster2 -e 'say 3'
+
+cp ../elf_f2 ../elf_f
