typo from cognominal++
git-svn-id: http://svn.pugscode.org/pugs@23994 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -389,7 +389,7 @@ modifiers at the end.)  For instance,
 
      m:P5/(?mi)^(?:[a-z]|\d){1,2}(?=\s)/
 
-is equivalant to the Perl 6 syntax:
+is equivalent to the Perl 6 syntax:
 
     m/ :i ^^ [ <[a..z]> || \d ] ** 1..2 <before \s> /
 
