--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 23 Feb 2008
+  Last Modified: 21 May 2008
   Number: 12
-  Version: 58
+  Version: 59
 
 =head1 Overview
 
@@ -704,12 +704,12 @@ You can write your own C<BUILD> submethod to control initialization.
 If you name an attribute as a parameter, that attribute is initialized
 directly, so
 
-    submethod BUILD ($.tail, $!legs) {}
+    submethod BUILD ($!tail, $!legs) {}
 
 is equivalent to
 
     submethod BUILD ($tail, $legs) {
-        $.tail = $tail;
+        $!tail = $tail;
         $!legs = $legs;
     }
 
