--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pugs (6.2.12-2) unstable; urgency=low
+
+  * removed parrot embedding because it is broken in upstream
+  * added libghc6-network-dev as build dependency
+
+ -- Moritz Lenz <mlenz@physik.uni-wuerzburg.de>  Thu,  17 May 2007 23:35:15 +0100
+
 pugs (6.2.12-1) unstable; urgency=low
 
   * New upstream version (Closes: #351945).
