--- a/misc/yap6/TODO
+++ b/misc/yap6/TODO
@@ -5,7 +5,7 @@ diakopter added 2008-05-31:
  - rearrange source tree - DONE
  - stub in the Object/MetaModel dir structure
  - refactor handler structure to use a lookup/dispatch table
- - refactor into Perl 5 modules; top-level namespace: Perl6in5
+ - refactor into Perl 5 modules; top-level namespace: Perl6in5 - DONE
  - make the parser success-handlers generate an AST
    instead of pretending to be a rudimentary interpreter
  - add an optional Longest-Token-Matching mode to Parser.pm
@@ -16,3 +16,8 @@ diakopter added 2008-05-31:
  - add CHANGES
  - add KUDOS
  - add INSTALL
+
+diakopter added 2008-06-01:
+ - switch the debug/verbose/info/warn system to use Log::Log4perl
+ - use Sub::Exporter's subroutine wrapper-generators for
+   generating Perl 5 code for Perl 6 compilation units...?
