--- a/misc/elf/README
+++ b/misc/elf/README
@@ -10,7 +10,7 @@ elf_f_faster --help  for more info.
 It uses perl from your path.  5.10 is recommended - it can have half
 the startup time of 5.8.8.
 
-elf_f slower, but not always equivalent. (it uses Moose)
+elf_f is slower, but not always equivalent. (it uses Moose)
 
 P6 scripts:
   $ cat say3
