[gsoc_spectest] added mention of pos and length to deprecated-syntax.pod. Also added a test to check that Str.pos is gone. (added 1 test)
git-svn-id: http://svn.pugscode.org/pugs@20715 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/t/deprecated-syntax.pod
+++ b/t/deprecated-syntax.pod
@@ -30,6 +30,16 @@ All new files, and all below C<t/spec/> should follow the new conventions.
 The Perl 5 style negative array indexes C<@array[-1]> are spelled
 C<@array[*-1]> in Perl 6.
 
+=head2 pos()
+
+C<pos> is dead. C<$/.to> is the replacement.
+
+=head2 length()
+
+C<length> is gone. Hashes should use C<keys>, C<values>, or the hash in numeric
+context. For arrays, you want C<elems> or the array in numeric context. For
+strings, you want one of C<chars>, C<graphs>, C<codes>, or C<bytes>.
+
 =head2 Special Pugs variables
 
 Some tests rely on C<$?PUGS_BACKEND> and similar variables. Since they are not
