--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -1057,8 +1057,11 @@ See L</Range semantics>.
 
 Note that these differ:
 
-    $min ..^ $max	$ min .. $max-1
-    $min .. ^$max	# $min .. (0..$max-1)
+    0 ..^ 10	# 0 .. 9
+    0 .. ^10	# 0 .. (0..9)
+
+(It's not yet clear what the second one should mean, but whether it
+succeeds or fails, it won't do what you want.)
 
 =back
 
