this sentence no verb, diakopter++
git-svn-id: http://svn.pugscode.org/pugs@24003 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -346,7 +346,7 @@ list of whitespace.  From least valuable to most, the pecking order is:
 
 The primary intent of these rules is to minimize format disruption
 when substitution happens across line boundaries and such.  There is,
-of course, no guarantee that the result will exactly what a human would
+of course, no guarantee that the result will be exactly what a human would
 do.
 
 The C<:s> modifier is considered sufficiently important that
