[elf] removed =~ added a doubt to the two compilers section in the README
git-svn-id: http://svn.pugscode.org/pugs@20836 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/README
+++ b/misc/elf/README
@@ -123,6 +123,8 @@ A development story (a tale of two compilers)
   you could now compile it.
     six -o mysix -x MySix.pm
 
+
+  (This is section is highly doubtfull, and IMHO an elf bug -- pmurias)
   But you could *not*, in general, do
     six MySix.pm
   If you tried, as MySix was compiled (which can involve running) and
