Added myself to AUTHORS file.
git-svn-id: http://svn.pugscode.org/pugs@20868 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -78,6 +78,7 @@ David "autark" Ranvig            (DAVIDRA)
 David Romano                     (UNOBE)
 David Vergin                     (DVERGIN)
 David "qtplatypus" Formosa
+Deven T. Corzine                 (DEVEN)
 Dimitry Golubovsky
 Don "dons" Stewart
 Douglas Hunter
