[elf] Elf has had two variants, only very slightly different.  The default one used Moose, the faster one not.  The two have been merged, with the default one now not.  elf_f_faster no longer exists - use the similar elf_f. Motivation - the low startup latency is nice, and with a dearth of development resources, the time when Moose would most help is now distant, so supporting both doesn't currently seem worth the complexity cost.
git-svn-id: http://svn.pugscode.org/pugs@20878 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/README
+++ b/misc/elf/README
@@ -3,9 +3,9 @@ OVERVIEW
 Elf is a p6 compiler.
 
 The currently recommended version is:
-  elf_f_faster
+  elf_f
 
-elf_f_faster --help  for more info.
+elf_f --help  for more info.
 
 It uses perl from your path.  5.10 is recommended - it can have half
 the startup time of 5.8.8.
@@ -14,7 +14,7 @@ elf_f is slower, but not always equivalent. (it uses Moose)
 
 P6 scripts:
   $ cat say3
-  #!/usr/bin/env elf_f_faster
+  #!/usr/bin/env elf_f
   say 3;
   $ ./say 3
   3
