--- a/misc/elf/elf_f_src/README
+++ b/misc/elf/elf_f_src/README
@@ -1,4 +1,5 @@
+See ../README .
 
 
 # Fastest way to test a modified emitter...
-../elf_f_faster2 EmitSimpleP5.pm -v -e 'test new emitter'
+../elf_f EmitSimpleP5.pm -v -e 'test new emitter'
